apps/webapp/overlay/green/green-lb.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: green
  name: green-lb
spec:
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 8080
  selector:
    app: color-webapp-green
  type: LoadBalancer
status:
  loadBalancer: {}
