apps/webapp/overlay/green/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-webapp-green-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /green
            pathType: Prefix
            backend:
              service:
                name: green-lb
                port:
                  number: 5001
